/*
  Copyright (c) 2008, 2014, Oracle and/or its affiliates. All rights reserved.

  The MySQL Connector/C++ is licensed under the terms of the GPLv2
  <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
  MySQL Connectors. There are special exceptions to the terms and
  conditions of the GPLv2 as it is applied to this software, see the
  FLOSS License Exception
  <http://www.mysql.com/about/legal/licensing/foss-exception.html>.

  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published
  by the Free Software Foundation; version 2 of the License.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
  for more details.

  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  51 Franklin St, Fifth Floor, Boston, MA 02110-1301  USA
*/

GA  1.1.6 -
- C/C++ won't build against Boost-devel-1.41.0-25.EL6.I686 (Bug#20125824)
- Make install fail for out of source build (Bug#19447498)
- Segmentation fault in retrieval of value using getter methods when 
  defaultstatementresulttype=forward_only and row position is after last row.
  (Bug#20085944)
- C/C++ should provide libmysqlclient and boost version macros with which
  it is build. (Bug#75250)
- C++11 support and replace deprecated auto_ptr. (Bug#75251)
- wasNull() method call before fetching the data results in assert failure
  (Bug#19938873)

GA  1.1.5 -
- DatabaseMetaData::getProcedures() returns syntax error for connection option
  metadatauseinfoschema=false (Bug#19505421)
- DatabaseMetaData::getColumns() returns empty resultset when
  metadataUseInfoSchema is true and for no schema. (Bug#19147897)