@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2009, 2014, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2009, 2015, Oracle and/or its affiliates. All rights reserved.
 
 The MySQL Connector/C++ is licensed under the terms of the GPLv2
 <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
@@ -627,6 +627,15 @@ LibmysqlStaticProxy::stmt_next_result(MYSQL_STMT * stmt)
 #else
 	throw ::sql::MethodNotImplementedException("::mysql_stmt_next_result()");
 #endif
+}
+/* }}} */
+
+
+/* {{{ LibmysqlStaticProxy::stmt_free_result() */
+bool
+LibmysqlStaticProxy::stmt_free_result(MYSQL_STMT * stmt)
+{
+	return ::mysql_stmt_free_result(stmt);
 }
 /* }}} */
 
