@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2009, 2014, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2009, 2015, Oracle and/or its affiliates. All rights reserved.
 
 The MySQL Connector/C++ is licensed under the terms of the GPLv2
 <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
@@ -160,6 +160,8 @@ typedef int (STDCALL *ptr2mysql_stmt_store_result)(MYSQL_STMT *);
 
 typedef int (STDCALL *ptr2mysql_stmt_next_result)(MYSQL_STMT *);
 
+typedef bool (STDCALL *ptr2mysql_stmt_free_result)(MYSQL_STMT *);
+
 typedef void (STDCALL *ptr2mysql_thread_init)();
 
 typedef void (STDCALL *ptr2mysql_thread_end)();
@@ -304,6 +306,8 @@ public:
 	virtual int stmt_store_result(MYSQL_STMT *) = 0;
 
 	virtual int stmt_next_result(MYSQL_STMT *) = 0;
+
+	virtual bool stmt_free_result(MYSQL_STMT *) = 0;
 
 	virtual void thread_end() = 0;
 
