@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2009, 2012, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2009, 2015, Oracle and/or its affiliates. All rights reserved.
 
 The MySQL Connector/C++ is licensed under the terms of the GPLv2
 <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
@@ -100,6 +100,8 @@ public:
 	int store_result();
 
 	int stmt_next_result();
+
+	bool stmt_free_result();
 
 	unsigned int warning_count();
 };
